--- a/hoobs-gsh-sidecar/ui/index.html
+++ b/hoobs-gsh-sidecar/ui/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <script src="sdk.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
