--- a/hoobs-shelly-sidecar/ui/index.html
+++ b/hoobs-shelly-sidecar/ui/index.html
@@ -1,21 +1,15 @@
 <html>
     <head>
-        <title>Google Home Login</title>
+        <title>Shelly Admin Interface</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="gsh">
+        <div id="shelly">
             <div class="content">
                 <div class="wrapper">
                     <div class="row">
                         <img class="logo" src="logo.png" />
-                        <div id="account-linked" class="message" style="display: none;">
-                            <h3>Account Linked</h3>
-                            <p>
-                                You can close this window.
-                            </p>
-                        </div>
                     </div>
                 </div>
             </div>
