use sdk in ring

--- a/hoobs-ring-sidecar/ui/index.html
+++ b/hoobs-ring-sidecar/ui/index.html
@@ -53,6 +53,7 @@
                 </form>
             </div>
         </div>
+        <script src="sdk.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
