--- a/hoobs-vivint-sidecar/ui/index.html
+++ b/hoobs-vivint-sidecar/ui/index.html
@@ -46,6 +46,21 @@
                         <div class="button login" onclick="login();" style="display: flex;">Login</div>
                         <div class="button validate" onclick="validate();" style="display: none;">Verify Code</div>
                     </div>
+                    <div class="spinner">
+                        <div class="inner">
+                            <div class="grid">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
