Fixed Vivint API changes. Added error handling and error display.

--- a/hoobs-vivint-sidecar/ui/index.html
+++ b/hoobs-vivint-sidecar/ui/index.html
@@ -45,6 +45,7 @@
                     <div class="row actions">
                         <div class="button login" onclick="login();" style="display: flex;">Login</div>
                         <div class="button validate" onclick="validate();" style="display: none;">Verify Code</div>
+                        <div class="error-message" style="display: none; color:red; padding-top:5px;"></div>
                     </div>
                     <div class="spinner">
                         <div class="inner">
